mg-cloak added to html so as not to show flashes of brackets on screen load fix for message box scroll collapsible subnav css fix for collapsible subnav color and text alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,11 +34,12 @@ form { background: #000;
 form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 #messages { 
-	position: fixed;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	height: 82%;
+	height: 80%;
+	min-height: 80%;
+	position: absolute;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
@@ -58,7 +59,7 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 	border-radius: 0px;
 	border: 0px;
 	margin-bottom: 0;
-	background-position: 0px 5px;
+	background-position: 0px 0px;
 }
 .navbar .navbar-brand {
 	font-family: 'Montserrat Bold', sans-serif;	
@@ -68,13 +69,25 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 	display: block;
 	margin-top: 5px;
 }
+.navbar-default .navbar-collapse {
+	background: black;
+}
 .navbar .navbar-brand span {
-	color: #ececec;
+	color: white;
 	margin-right: 35px;
+}
+.navbar .navbar-brand:hover {
+	color: #f7931a;
+}
+.navbar .navbar-brand:hover span {
+	color: white;
 }
 .navbar .navbar-right {
 	margin: 0px 30px 0 0;
 	overflow: hidden;
+}
+.navbar .navbar-right li{
+	text-align:center;
 }
 .navbar .navbar-right li.person a{
 	padding-right: 2px;
@@ -201,4 +214,9 @@ li.encryption.active {
 }
 .intro-modal  .right-side button{
 	margin-top: 5px;
+}
+
+.subnav-button {
+	right: 15px;
+	top: 8px;
 }
